Adjust CSS to be mobile first, and added hover button on search

--- a/search-results.html
+++ b/search-results.html
@@ -20,8 +20,8 @@
             </a>
             <div class="search-box"> <!--Search Bar -->
                 <div class="container-1">
-                    <span class="icon"><i class="fa fa-search"></i></span>
                     <input type="search" id="search" placeholder="Search beer or brewery" />
+                    <button class="icon"><i class="fa fa-search"></i></button>
                 </div>
             </div>
         </nav>
