--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </nav>
         <section class="search-box"> <!--Search Bar -->
             <div class="container-1">
-                <span class="icon"><i class="fa fa-search"></i></span>
                 <input type="search" id="search" placeholder="Search beer or brewery" />
+                <button class="icon"><i class="fa fa-search"></i></button>
             </div>
         </section>
         <footer>
