Consolidated CSS, fixed footer/main issues

--- a/search-results.html
+++ b/search-results.html
@@ -9,17 +9,16 @@
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-        <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"> -->
-        <link rel="stylesheet" type="text/css" href="style/main.css">
-        <link rel="stylesheet" type="text/css" href="style/search.css">
+        <link rel="stylesheet" type="text/css" href="style/normalize.css">
+        <link rel="stylesheet" type="text/css" href="style/style.css">
     </head>
-    <body>
+    <body class="body-secondary">
         <nav class="header"> <!--Logo and Tagline -->
-            <a href="index.html" class="logo">
+            <a href="index.html" class="logo-secondary">
                 <img src="assets/images/footer-logo.png" alt="Know Your Beer Logo">
             </a>
-            <div class="search-box"> <!--Search Bar -->
-                <div class="container-1">
+            <div class="search-box-secondary"> <!--Search Bar -->
+                <div class="search-container-secondary">
                     <input type="search" id="search" placeholder="Search beer or brewery" />
                     <button class="icon"><i class="fa fa-search"></i></button>
                 </div>
@@ -89,14 +88,14 @@
                 </div>
             </div>
         </section>
-        <footer>
+        <footer class="footer-secondary">
             <p>Copyright Matt Fitch 2016</p> 
-            <div class="footer-links">
+            <div class="footer-secondary-links">
                 <a href="/about">About Us</a>
                 |
                 <a href="/contact">Contact Us</a>
             </div>
-            <a href="index.html" class="footer-logo">
+            <a href="index.html" class="footer-secondary-logo">
                 <img src="assets/images/footer-logo.png" alt="Know Your Beer FooterImage">
             </a>
         </footer>
