--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
         <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-        <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"> -->
-        <link rel="stylesheet" type="text/css" href="style/main.css">
-        <link rel="stylesheet" type="text/css" href="style/index.css">
+        <link rel="stylesheet" type="text/css" href="style/normalize.css">
+        <link rel="stylesheet" type="text/css" href="style/style.css">
     </head>
     <body>
         <nav class="logo-tagline"> <!--Logo and Tagline -->
@@ -21,7 +20,7 @@
             <h2 class="tagline">The Online Beer Encyclopedia</h2>
         </nav>
         <section class="search-box"> <!--Search Bar -->
-            <div class="container-1">
+            <div class="search-container">
                 <input type="search" id="search" placeholder="Search beer or brewery" />
                 <button class="icon"><i class="fa fa-search"></i></button>
             </div>
@@ -37,6 +36,7 @@
                 <img src="assets/images/footer-logo.png" alt="Know Your Beer FooterImage">
             </a>
         </footer>
+        
         
     </body>
 </html>
